--- a/gtk/pango/AUTHORS
+++ b/gtk/pango/AUTHORS
@@ -3,6 +3,7 @@ Pango patch was originally written by Harsha Senanayaka of John Keells
 Holdings (harsha.sgit at keells com)
 
 Ported to different versions by Chamath Keppitiyagama of the University
-of British Columbia (chamath at cs ubc ca) and Anuradha Ratnaweera of
-Virtusa Corporation (anuradha at gnu org).
+of British Columbia (chamath at cs ubc ca), Anuradha Ratnaweera of
+Virtusa Corporation (anuradha at gnu org) and Nimal Ratnayaka (nimalr at
+pdn ac lk).
 
